[tool.poetry]
name = "moto-issue-demo"
version = "0.1.0"
description = ""
authors = ["Mark Larah <markl@yelp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.24.4"

[tool.poetry.dev-dependencies]
pytest = "^7"
moto = {extras = ["dynamodb"], version = "3.1.12"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
